# myrepo2

./: .gitignore  Makefile  PROJECT_MAP.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  extensions.py
backend/app/ai/: __init__.py  models.py  routes.py  services.py
backend/app/auth/: models.py  routes.py  services.py
backend/app/shared/: __init__.py  errors.py  logging_config.py  responses.py
backend/app/tasks/: __init__.py  models.py  routes.py  services.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AIPlayground.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  Register.jsx  Tasks.jsx
