[project]
name = "taskflow"
version = "1.0.0"
description = "AI-powered task management platform"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-Login==0.6.3",
    "Flask-CORS==5.0.1",
    "SQLAlchemy==2.0.51",
    "openai==2.45.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "authlib==1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-flask==1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
